# Indie_Studio

./: CMakeLists.txt  Makefile  README.md
assets/3D_models/: Block.b3d  Bomb.b3d  Bonus.b3d  fire.b3d  speed.b3d
include/: Bomber.hpp  Bomberman.hpp  Data.hpp  End_Game.hpp  Event_Manager.hpp  Flame.hpp  Map.hpp  Map_Parser.hpp  Pause.hpp  Player.hpp  Save.hpp  enum_indie_studio.hpp  menu.hpp
map/: large.txt  medium.txt  small.txt
src/: Bomber.cpp  Bomberman.cpp  End_Game.cpp  Event_Manager.cpp  Flame.cpp  Map.cpp  Map_Parser.cpp  Pause.cpp  Player.cpp  Save.cpp  main.cpp  menu.cpp
